--- a/index.html
+++ b/index.html
@@ -431,9 +431,9 @@ You will lose your progress if you click away from this form.</p>
     <article>
         <p>TRAVEL:<br><br>
             Best Major Airport: SeaTac<br>
-            Renting a Car is probably the most convenient way to travel WA (though not necessarily around Seattle…traffic!) The Drive over the Cascades mountain pass is beautiful, and you’d have more flexibility to sight-see.<br>
-            Airporter shuttles from SeaTac are also quite convenient. They drop-off/pick-up at a gas station in Cle Elum that is 10 minutes from the venue. We can help coordinate pick-ups as needed.<br><br>
-            Local Taxi Companies:<br>
+            From SeaTac, consider taking the LINK to Seattle or the Airporter shuttle to Cle Elum (10 minutes from Flying Horseshoe Ranch). We can help organize pick-ups from Cle Elum.<br>
+            Renting a Car is probably the most convenient way to travel WA (though not necessarily around Seattle's traffic). The Drive over the Cascades mountain pass is beautiful, and you’d have more flexibility to sight-see.<br><br>
+            Taxi Companies near Flying Horseshoe Ranch:<br>
             K.C. Cab<br>
             Rodeo Town Taxi<br>
             Uber & Lyft<br><br><br><br>
