--- a/index.html
+++ b/index.html
@@ -431,13 +431,14 @@ You will lose your progress if you click away from this form.</p>
     <article>
         <p>TRAVEL:<br><br>
             Nearest Major Airport: <a href="https://www.portseattle.org/sea-tac" target="_blank">SeaTac</a> (SEA)<br>
-            From SeaTac, consider taking the <a href="https://www.soundtransit.org/ride-with-us/stations/link-light-rail-stations" target="_blank">LINK</a> to Seattle or the <a href="https://airporter.com/shuttle/schedules/yakima-to-sea-tac/" target="_blank">Airporter shuttle</a> to Cle Elum (10 minutes from Flying Horseshoe Ranch). We can help organize pick-ups from Cle Elum.<br>
+            Take the <a href="https://www.soundtransit.org/ride-with-us/stations/link-light-rail-stations" target="_blank">LINK</a> to Seattle.<br>
+            Ride the <a href="https://airporter.com/shuttle/schedules/yakima-to-sea-tac/" target="_blank">Airporter shuttle</a> to Cle Elum (10 minutes from Flying Horseshoe Ranch). We can help organize pick-ups from Cle Elum.<br>
             Renting a Car is probably the most convenient way to travel WA (though not necessarily around Seattle's traffic). The Drive over the Cascades mountain pass is beautiful, and you’d have more flexibility to sight-see.<br>
-            If you are in Seattle for the day, consider a float plane ride on <a href="https://www.kenmoreair.com/" target="_blank">Kenmore Air</a><br><br>
+            See WA by float plane with <a href="https://www.kenmoreair.com/" target="_blank">Kenmore Air</a><br><br>
             Taxi Companies near Flying Horseshoe Ranch:<br>
-            <a href="https://kccabellensburg.com/" target="_blank">K.C. Cab</a>: 509 929 3055<br>
-            <a href="https://rodeo-town-taxi-llc.business.site/" target="_blank">Rodeo Town Taxi</a>: 509 929 4222<br>
-            Uber & Lyft<br><br><br><br>
+            <a href="https://kccabellensburg.com/" target="_blank">K.C. Cab</a>:&nbsp;&nbsp; 509 929 3055<br>
+            <a href="https://rodeo-town-taxi-llc.business.site/" target="_blank">Rodeo Town Taxi</a>:&nbsp;&nbsp; 509 929 4222<br>
+            Uber & Lyft<br><br><br>
             EXPLORE WA:<br>
             We love WA and want to share it with all you out-of-staters. Check out the map of our top-tier sightseeing destinations, hikes, and scenic drives. Fullscreen for full experience.
         </p>
