--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ You will lose your progress if you click away from this form.</p>
             <a href="https://kccabellensburg.com/" target="_blank">K.C. Cab</a>:&nbsp;&nbsp; 509 929 3055<br>
             <a href="https://rodeo-town-taxi-llc.business.site/" target="_blank">Rodeo Town Taxi</a>:&nbsp;&nbsp; 509 929 4222<br>
             Uber & Lyft<br><br><br>
-            EXPLORE WA:<br>
+            EXPLORE WA:<br><br>
             We love WA and want to share it with all you out-of-staters. Check out the map of our top-tier sightseeing destinations, hikes, and scenic drives. Fullscreen for full experience.
         </p>
         <amp-iframe width="800" height="800" scrolling="no" sandbox="allow-modals allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" src="https://www.google.com/maps/d/embed?mid=10eAS31R--V5vUk8w6CcqVqAqBmJ_Hbjm">
