--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ You will lose your progress if you click away from this form.</p>
         OFF-SITE OPTIONS:<br><br>
             If you must stay off-site, check out our suggestions below. We encourage booking in Cle Elum, Roslyn, or Ronald to promote ride-sharing. Roslyn is a lovely town to explore, and it hosts a Sunday Farmer’s market. Ronald is just west nearer to Lake Cle Elum, and offers many seasonal rentals. Also look at Suncadia for multi-bedroom houses for larger groups.<br><br>
             Worth a look:<br> 
-            <a href="https://goo.gl/maps/hxVo7CHoqjj6w9RH8" target="_blank">Hotel Roslyn</a>: we have reserved four rooms for family (get in touch if interested).<br>
+            <a href="https://goo.gl/maps/hxVo7CHoqjj6w9RH8" target="_blank">Hotel Roslyn</a>: we have reserved four rooms for family (<a href="mailto:hi@markandannie.camp?Subject=Hotel" target="_blank">get in touch</a> if interested).<br>
             <a href="https://goo.gl/maps/DSnXhBNVE59wk3uPA" target="_blank">Spruce Moose Inn</a>: downtown Roslyn.<br>
             <a href="https://goo.gl/maps/gXPy9jBLSgFdEEDV7" target="_blank">Huckleberry House</a>: historic Roslyn inn.<br>
             <a href="https://goo.gl/maps/3SUuDWnjgEfCxTRx6" target="_blank">Iron Horse Inn</a>: sleep in a train caboose.<br>
