--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ You will lose your progress if you click away from this form.</p>
             Nearest Major Airport: <a href="https://www.portseattle.org/sea-tac" target="_blank">SeaTac</a> (SEA)<br>
             Take the <a href="https://www.soundtransit.org/ride-with-us/stations/link-light-rail-stations" target="_blank">LINK</a> to Seattle.<br>
             Ride the <a href="https://airporter.com/shuttle/schedules/yakima-to-sea-tac/" target="_blank">Airporter shuttle</a> to Cle Elum (10 minutes from Flying Horseshoe Ranch). We can help organize pick-ups from Cle Elum.<br>
-            Renting a Car is probably the most convenient way to travel WA (though not necessarily around Seattle's traffic). The Drive over the Cascades mountain pass is beautiful, and you’d have more flexibility to sight-see.<br>
+            Rent a car. This is the most convenient way to travel WA (except in Seattle's traffic). The drive over the Cascades is beautiful, and you’d have more flexibility to sight-see.<br>
             See WA by float plane with <a href="https://www.kenmoreair.com/" target="_blank">Kenmore Air</a><br><br>
             Taxi Companies near Flying Horseshoe Ranch:<br>
             <a href="https://kccabellensburg.com/" target="_blank">K.C. Cab</a>:&nbsp;&nbsp; 509 929 3055<br>
