--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ You will lose your progress if you click away from this form.</p>
             Ride the <a href="https://airporter.com/shuttle/schedules/yakima-to-sea-tac/" target="_blank">Airporter shuttle</a> to Cle Elum (10 minutes from Flying Horseshoe Ranch). We can help organize pick-ups from Cle Elum.<br>
             Rent a car. This is the most convenient way to travel WA (except in Seattle's traffic). The drive over the Cascades is beautiful, and you’d have more flexibility to sight-see.<br>
             See WA by float plane with <a href="https://www.kenmoreair.com/" target="_blank">Kenmore Air</a><br><br>
-            Taxi Companies near Flying Horseshoe Ranch:<br>
+            Taxis near Flying Horseshoe Ranch:<br>
             <a href="https://kccabellensburg.com/" target="_blank">K.C. Cab</a>:&nbsp;&nbsp; 509 929 3055<br>
             <a href="https://rodeo-town-taxi-llc.business.site/" target="_blank">Rodeo Town Taxi</a>:&nbsp;&nbsp; 509 929 4222<br>
             Uber & Lyft<br><br><br>
@@ -444,7 +444,7 @@ You will lose your progress if you click away from this form.</p>
         </p>
         <amp-iframe width="800" height="800" scrolling="no" sandbox="allow-modals allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" src="https://www.google.com/maps/d/embed?mid=10eAS31R--V5vUk8w6CcqVqAqBmJ_Hbjm">
         </amp-iframe>
-        <p>Annie LOVES to make recommendations for touring, so let us know if you plan to add a few days in WA to your trip!</p>
+        <p>Annie LOVES to make recommendations, so let us know if you plan to add a few days touring WA to your trip!</p>
     </article>
 </section>
 
