--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ You will lose your progress if you click away from this form.</p>
         </p>
         <amp-iframe width="800" height="800" scrolling="no" sandbox="allow-modals allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" src="https://www.google.com/maps/d/embed?mid=10eAS31R--V5vUk8w6CcqVqAqBmJ_Hbjm">
         </amp-iframe>
-        <p>Annie LOVES to make recommendations, so let us know if you plan to add a few days touring WA to your trip!</p>
+        <p>Annie LOVES to make recommendations, so let us know if you plan to tour WA!</p>
     </article>
 </section>
 
