--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ You will lose your progress if you click away from this form.</p>
 		<p><a on="tap:accordion.expand(section='rsvp'),rsvp.scrollTo(duration=700)">RSVP</a> to book your stay on the ranch!<br><br>
         Note:<br>
             Tent camping is also encouraged. There is a nice flat area near the pool / parking.<br> 
-            If your booking does not include linens, let us know and we can help you procure them.<br>
+            If your booking does not include linens, <a href="mailto:hi@markandannie.camp?Subject=Bedding" target="_blank">let us know</a> and we can help you procure them.<br>
             The tents & tipis on the bluff are outhouse-only. Shower in the shared bath houses at camp below.<br><br><br><br>
         OFF-SITE OPTIONS:<br><br>
             If you must stay off-site, check out our suggestions below. We encourage booking in Cle Elum, Roslyn, or Ronald to promote ride-sharing. Roslyn is a lovely town to explore, and it hosts a Sunday Farmer’s market. Ronald is just west nearer to Lake Cle Elum, and offers many seasonal rentals. Also look at Suncadia for multi-bedroom houses for larger groups.<br><br>
@@ -495,7 +495,7 @@ You will lose your progress if you click away from this form.</p>
             
             <em>I need a pillow and bedding!</em><br>
             We have a rental hookup for pillows, pillow cases, sleeping bags, liners, and towels.<br>
-            Let us know what you need and we'll make sure it's here when you arrive.<br><br>
+            <a href="mailto:hi@markandannie.camp?Subject=Bedding" target="_blank">Let us know</a> what you need and we'll make sure it's here when you arrive.<br><br>
             
             <em>When should I arrive?</em><br>
             We are partying all weekend, from Friday afternoon to Sunday. The ceremony is at 5pm on Saturday. Check out the <a on="tap:accordion.expand(section='schedule'),schedule.scrollTo(duration=700)">Schedule</a> for more info.<br><br>
