--- a/index.html
+++ b/index.html
@@ -408,11 +408,12 @@ You will lose your progress if you click away from this form.</p>
         </p>
         <amp-iframe width="400" height="311.5" scrolling="no" sandbox="allow-scripts allow-same-origin allow-popups-to-escape-sandbox" layout="responsive" frameborder="0" src="https://docs.google.com/spreadsheets/d/17c6lBYkNtdiD44w66Kn_5JvMgTXZALwh1MnBOybNuBw/htmlembed/sheet?gid=1014832229">
         </amp-iframe>
-		<p><a on="tap:accordion.expand(section='rsvp'),rsvp.scrollTo(duration=700)">RSVP</a> to book your stay on the ranch!<br><br>
+		<p>
         Note:<br>
             Tent camping is also encouraged. There is a nice flat area near the pool / parking.<br> 
             If your booking does not include linens, <a href="mailto:hi@markandannie.camp?Subject=Bedding" target="_blank">let us know</a> and we can help you procure them.<br>
-            The tents & tipis on the bluff are outhouse-only. Shower in the shared bath houses at camp below.<br><br><br><br>
+            The tents & tipis on the bluff are outhouse-only. Shower in the shared bath houses at camp below.<br>
+            <a on="tap:accordion.expand(section='rsvp'),rsvp.scrollTo(duration=700)">RSVP</a> to book your stay on the ranch!<br><br><br><br>
         OFF-SITE OPTIONS:<br><br>
             If you must stay off-site, check out our suggestions below. We encourage booking in Roslyn, Ronald, or Cle Elum to promote ride-sharing. Roslyn is a lovely town to explore, and it hosts a Sunday Farmer’s market. Ronald is just west nearer to Lake Cle Elum, and offers many seasonal rentals. Also look at Suncadia for multi-bedroom houses for larger groups.<br><br>
             Worth a look:<br> 
