--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ You will lose your progress if you click away from this form.</p>
             EXPLORE WA:<br><br>
             We love WA and want to share it with all you out-of-staters.<br>Check out the map of our top-tier sightseeing destinations, hikes, and scenic drives.<br> Fullscreen for full experience.
         </p>
-        <amp-iframe width="800" height="800" scrolling="no" sandbox="allow-modals allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" src="https://www.google.com/maps/d/embed?mid=10eAS31R--V5vUk8w6CcqVqAqBmJ_Hbjm">
+        <amp-iframe width="800" height="800" sandbox="allow-modals allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" src="https://www.google.com/maps/d/embed?mid=10eAS31R--V5vUk8w6CcqVqAqBmJ_Hbjm">
         </amp-iframe>
         <p>Annie LOVES to make recommendations, so <a href="mailto:hi@markandannie.camp?Subject=Touring" target="_blank">let us know</a> if you plan to tour WA!</p>
     </article>
