--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ You will lose your progress if you click away from this form.</p>
         OFF-SITE OPTIONS:<br><br>
             If you must stay off-site, check out our suggestions below. We encourage booking in Roslyn, Ronald, or Cle Elum to promote ride-sharing. Roslyn is a lovely town to explore, and it hosts a Sunday Farmer’s market. Ronald is just west nearer to Lake Cle Elum, and offers many seasonal rentals. Also look at Suncadia for multi-bedroom houses for larger groups.<br><br>
             Worth a look:<br> 
-            <a href="https://goo.gl/maps/hxVo7CHoqjj6w9RH8" target="_blank">Hotel Roslyn</a>: we have reserved four rooms for family (get in touch if interested).<br>
+            <a href="https://goo.gl/maps/hxVo7CHoqjj6w9RH8" target="_blank">Hotel Roslyn</a>: we have reserved four rooms for family (  get in touch if interested).<br>
             <a href="https://goo.gl/maps/DSnXhBNVE59wk3uPA" target="_blank">Spruce Moose Inn</a>: downtown Roslyn.<br>
             <a href="https://goo.gl/maps/gXPy9jBLSgFdEEDV7" target="_blank">Huckleberry House</a>: historic Roslyn inn.<br>
             <a href="https://goo.gl/maps/3SUuDWnjgEfCxTRx6" target="_blank">Iron Horse Inn</a>: sleep in a train caboose.<br>
@@ -441,7 +441,7 @@ You will lose your progress if you click away from this form.</p>
             <a href="https://rodeo-town-taxi-llc.business.site/" target="_blank">Rodeo Town Taxi</a>:&nbsp;&nbsp; 509 929 4222<br>
             Uber & Lyft<br><br><br>
             EXPLORE WA:<br><br>
-            We love WA and want to share it with all you out-of-staters.<br>Check out the map of our top-tier sightseeing destinations, hikes, and scenic drives.<br> Fullscreen for full experience.
+            We love WA and want to share it with all you out-of-staters.<br>Check out the map of our top-tier sightseeing destinations, hikes, and scenic drives.<br> <a href="https://www.google.com/maps/d/viewer?mid=10eAS31R--V5vUk8w6CcqVqAqBmJ_Hbjm&ll" target="_blank">Fullscreen for full experience</a> (links and stuff).
         </p>
         <amp-iframe width="800" height="800" sandbox="allow-modals allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" src="https://www.google.com/maps/d/embed?mid=10eAS31R--V5vUk8w6CcqVqAqBmJ_Hbjm">
         </amp-iframe>
