--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ You will lose your progress if you click away from this form.</p>
 <section id="ranch" on="expand:ranch.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>The Ranch</h1></header>
     <article>
-	<p>We recently found the town of Roslyn, WA as the site for our first home.<br>
+	<p>We recently chose the town of Roslyn as the site for our first home.<br>
 	And 10 miles to the east you can find <a href="https://www.flyinghorseshoeranch.com/" target="_blank">Flying Horseshoe Ranch</a>.<br><br>
         Annie attended summer horse camp here as a kid, and experienced her first taste of the open Ponderosa forest, rolling hills, and Kittitas Valley fields. The ranch has been family owned since the 1950s, shifting from a kids camp to a guest ranch about 15 years ago. Their property enjoys views of the Teanaway Valley and includes 100+ acres of forested trails up the hill—ample space to roam.</p>
 
@@ -333,7 +333,7 @@ You will lose your progress if you click away from this form.</p>
     <header class="sectionTitle"><h1>Lodging</h1></header>
     <article>
 		<p>Flying Horseshoe Ranch sleeps about 100 people, and we would love to fill every bed!<br>
-           Accommodations range from bunk houses to canvas tents with beds & linens, all while maintaining a rustic environment with shared bathrooms and nature all around.<br><br>ON-RANCH OFFERINGS:</p>
+           Accommodations range from bunk houses to canvas tents, all while maintaining a rustic environment with shared bathrooms and nature all around.<br><br>ON-RANCH OFFERINGS:</p>
             <figure class="lodging">
             <amp-img alt="Bunk Cabin"
               src="img/bunk.jpg"
