--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ You will lose your progress if you click away from this form.</p>
           </figure>
         <p>
             <b>Shared Bunk Cabins</b> (9)<br>
-            Located in main camping area.<br>
+            Located in main camp area.<br>
             12'x14' cabin with bunk beds for 8 people.<br>
             Bring your sleeping bag and pillow (or ask us about rentals).<br>
             Use the shared bath houses nearby.</p>
@@ -358,7 +358,7 @@ You will lose your progress if you click away from this form.</p>
           </figure>
         <p>
             <b>Wrangler Cabins</b> (2)<br>
-            Located in the main camping area.<br>
+            Located in the main camp area.<br>
             12'x14' cabin.<br>
             One queen bed and two twin beds, bunked (pillows & bedding included).<br>
             Use the shared bath houses nearby.</p>
