--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ You will lose your progress if you click away from this form.</p>
             </amp-img>
           </figure>
         <p>
-            <b>Canvas Tent</b> (2)<br>
+            <b>Canvas Tents</b> (2)<br>
             Located on the hill (0.7 miles from main camp), accessible by car or foot.<br>
             16'x14' canvas tent on a redwood deck.<br>
             One queen bed (pillows & bedding included).<br>
@@ -398,7 +398,7 @@ You will lose your progress if you click away from this form.</p>
             </amp-img>
           </figure>
         <p>
-            <b>Tipi</b> (4)<br>
+            <b>Tipis</b> (4)<br>
             Located on the hill (0.7 miles from main camp), accessible by car or foot.<br>
             16' diameter Sioux-style tipis, lit by lantern.<br>
             Four twin beds.<br>
