--- a/index.html
+++ b/index.html
@@ -410,10 +410,10 @@ You will lose your progress if you click away from this form.</p>
         </amp-iframe>
 		<p>
         Note:<br>
-            Tent camping is also encouraged. There is a nice flat area near the pool / parking.<br> 
-            If your booking does not include linens, <a href="mailto:hi@markandannie.camp?Subject=Bedding" target="_blank">let us know</a> and we can help you procure them.<br>
-            The tents & tipis on the bluff are outhouse-only. Shower in the shared bath houses at camp below.<br>
-            <a on="tap:accordion.expand(section='rsvp'),rsvp.scrollTo(duration=700)">RSVP</a> to book your stay on the ranch!<br><br><br><br>
+            > Tent camping is also encouraged. There is a nice flat area near the pool / parking.<br> 
+            > If your booking does not include linens, <a href="mailto:hi@markandannie.camp?Subject=Bedding" target="_blank">let us know</a> and we can help you procure them.<br>
+            > The tents & tipis on the bluff are outhouse-only. Shower in the shared bath houses at camp below.<br>
+            > <a on="tap:accordion.expand(section='rsvp'),rsvp.scrollTo(duration=700)">RSVP</a> to book your stay on the ranch!<br><br><br><br>
         OFF-SITE OPTIONS:<br><br>
             If you must stay off-site, check out our suggestions below. We encourage booking in Roslyn, Ronald, or Cle Elum to promote ride-sharing. Roslyn is a lovely town to explore, and it hosts a Sunday Farmer’s market. Ronald is just west nearer to Lake Cle Elum, and offers many seasonal rentals. Also look at Suncadia for multi-bedroom houses for larger groups.<br><br>
             Worth a look:<br> 
