--- a/index.html
+++ b/index.html
@@ -431,10 +431,10 @@ You will lose your progress if you click away from this form.</p>
     <header class="sectionTitle"><h1>Getting Around</h1></header>
     <article>
         <p>TRAVEL:<br><br>
-            > Fly in to <a href="https://www.portseattle.org/sea-tac" target="_blank">SeaTac</a> (SEA)<br>
+            > Fly in to <a href="https://www.portseattle.org/sea-tac" target="_blank">SeaTac</a> (SEA).<br>
             > Take the <a href="https://www.soundtransit.org/ride-with-us/stations/link-light-rail-stations" target="_blank">LINK</a> to Seattle.<br>
             > Ride the <a href="https://airporter.com/shuttle/schedules/yakima-to-sea-tac/" target="_blank">Airporter shuttle</a> from SeaTac to Cle Elum (10 minutes from Flying Horseshoe Ranch). We can help organize pick-ups from Cle Elum.<br>
-            > Rent a car. This is the most convenient and scenic way to travel WA (except in Seattle).<br>
+            > Rent a car. This is the most convenient and scenic way to travel WA (except in Seattle's traffic).<br>
             > See WA by float plane with <a href="https://www.kenmoreair.com/" target="_blank">Kenmore Air</a>.<br><br>
             Taxis near Flying Horseshoe Ranch:<br>
             <a href="https://kccabellensburg.com/" target="_blank">K.C. Cab</a>:&nbsp;&nbsp; 509 929 3055<br>
