--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@ You will lose your progress if you click away from this form.</p>
             If you stay on the ranch, you may need to bring your own pillow and bedding (depending on the booking). See <a on="tap:accordion.expand(section='lodging'),lodging.scrollTo(duration=700)">Lodging</a> for more info.<br><br>
             
             <em>I need a pillow and bedding!</em><br>
-            We have a rental hookup for pillows, pillow cases, sleeping bags, liners, and towels.<br>
+            We have a local rental hookup for pillows, pillow cases, sleeping bags, liners, and towels.<br>
             <a href="mailto:hi@markandannie.camp?Subject=Bedding" target="_blank">Let us know</a> what you need and we'll make sure it's here when you arrive.<br><br>
             
             <em>When should I arrive?</em><br>
