--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@ You will lose your progress if you click away from this form.</p>
             Check out <a href="https://goo.gl/maps/J8r6MVTXRfjnWFu39" target="_blank">Waggin Tails Ranch</a> or <a href="https://goo.gl/maps/NERGmT8yaWMgUn9v6" target="_blank">Bord & Pillar Pet Resort</a> for boarding.<br><br>
             
             <em>What is the dress code?</em><br>
-            No camp uniforms required. Annie says "summer casual festive" whatever that means.<br><br>
+            No camp uniforms required. Annie says "casual summer festive," whatever that means.<br><br>
             
             <em>Can I bring my own tent? What about my RV?</em><br>
             Yes, and yes! Just set up on the flat area south of the parking lot (see <a on="tap:accordion.expand(section='ranch'),ranch.scrollTo(duration=700)">ranch map</a>).<br><br>
