--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ p.centered {
     border:none;
     background:#fff;
     color:#16161d;
+    border-bottom: .3px solid #f2f2f5;
     border-left: calc(50vw - 14vh) solid transparent;
     border-right: calc(50vw - 14vh) solid transparent;
     outline:none;
