--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ p.centered {
     color:#fff;
     background:none;
     border-top:none;
-    border-bottom: .3px solid #f2f2f5;
+    border-bottom: .3px solid #fff;
     border-left: calc(50vw - 14vh) solid transparent;
     border-right: calc(50vw - 14vh) solid transparent;
     box-sizing: border-box;
@@ -149,7 +149,7 @@ p.centered {
     border:none;
     background:#fff;
     color:#16161d;
-    border-bottom: .3px solid #f2f2f5;
+    border-bottom: .3px solid #eee;
     border-left: calc(50vw - 14vh) solid transparent;
     border-right: calc(50vw - 14vh) solid transparent;
     outline:none;
