--- a/index.html
+++ b/index.html
@@ -453,11 +453,11 @@ You will lose your progress if you click away from this form.</p>
 <section id="schedule" on="expand:schedule.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>Schedule</h1></header>
     <article>
-        <p class="centered">FRIDAY<br><br>
-        3pm.....Field Games / Hike / Pool Time<br>
+        <p class="centered">FRIDAY<br>
+        3pm..............Fun in the Sun<br>
         5pm…………………………….............................Dinner<br>
         6pm........................Campfire and S'mores<br>
-        10pm............................................Night Frisbee<br><br>
+        10pm.............................................Glow Frisbee<br><br>
         SATURDAY<br>
         9am........................Breakfast for Campers<br>
         11am............................................Group Activity<br>
@@ -471,7 +471,7 @@ You will lose your progress if you click away from this form.</p>
         12pm..........................................Depart Ranch<br>
         12pm.................<a href="http://roslynfarmersmarket.org/" target="_blank">Roslyn Farmer's Market</a><br>
         2pm.........................Meet at <a href="https://goo.gl/maps/j9vLN5aDKGGfuPyX6" target="_blank">M+A's House</a><br>
-        3pm....................................................Hike / Fish<br>
+        3pm.........................................Roslyn Ramble<br>
         </p>
     </article>
 </section>
