--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ p.centered {
     border:none;
     background:#fff;
     color:#16161d;
-    border-bottom: .3px solid #eee;
+    border-bottom: .3px solid #ccc;
     border-left: calc(50vw - 14vh) solid transparent;
     border-right: calc(50vw - 14vh) solid transparent;
     outline:none;
