--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ You will lose your progress if you click away from this form.</p>
     <header class="sectionTitle"><h1>Schedule</h1></header>
     <article>
         <p class="centered">FRIDAY<br>
-        3pm.............................Fun in the Sun<br>
+        3pm.........................................Fun in the Sun<br>
         5pm…………………………….............................Dinner<br>
         6pm........................Campfire and S'mores<br>
         10pm.............................................Glow Frisbee<br><br>
@@ -470,8 +470,8 @@ You will lose your progress if you click away from this form.</p>
         10am..........................................................Tidy-up<br>
         12pm..........................................Depart Ranch<br>
         12pm.................<a href="http://roslynfarmersmarket.org/" target="_blank">Roslyn Farmer's Market</a><br>
-        2pm..........................Meet at <a href="https://goo.gl/maps/j9vLN5aDKGGfuPyX6" target="_blank">M+A's House</a><br>
-        3pm.........................................Roslyn Ramble<br>
+        2pm.........................Meet at <a href="https://goo.gl/maps/j9vLN5aDKGGfuPyX6" target="_blank">M+A's House</a><br>
+        3pm........................................Roslyn Ramble<br>
         </p>
     </article>
 </section>
