--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ You will lose your progress if you click away from this form.</p>
     <article>
         <p class="centered">FRIDAY<br>
         3pm............................................Fun in the Sun<br>
-        5pm…………………………….............................Dinner<br>
+        5pm…………………………….............................Supper<br>
         6pm........................Campfire and S'mores<br>
         10pm.............................................Glow Frisbee<br><br>
         SATURDAY<br>
