--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ You will lose your progress if you click away from this form.</p>
     <header class="sectionTitle"><h1>Schedule</h1></header>
     <article>
         <p class="centered">FRIDAY<br>
-        3pm............................................Fun in the Sun<br>
+        3pm...........................................Fun in the Sun<br>
         5pm……………………………............................Supper<br>
         6pm........................Campfire and S'mores<br>
         10pm.............................................Glow Frisbee<br><br>
