--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ section[expanded] > .sectionTitle > h1{
 	  cursor:pointer;
   }
   button svg{
-      fill:#f2f2f2;
+      fill:#eee;
       transition:all .3s;      
   }
   button:hover svg{
