--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ section[expanded] > .sectionTitle > h1{
 	  cursor:pointer;
   }
   button svg{
-      fill:#eee;
+      fill:#ddd;
       transition:all .3s;      
   }
   button:hover svg{
