--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ section[expanded] > .sectionTitle > h1{
 	  cursor:pointer;
   }
   button svg{
-      fill:#ddd;
+      fill:#e8e8e8;
       transition:all .3s;      
   }
   button:hover svg{
