--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ p.centered {
     color:#fff;
     background:none;
     border-top:none;
-    border-bottom: .3px solid #fff;
+    border-bottom: .3px solid #ddd;
     border-left: calc(50vw - 14vh) solid transparent;
     border-right: calc(50vw - 14vh) solid transparent;
     box-sizing: border-box;
