--- a/index.html
+++ b/index.html
@@ -479,6 +479,12 @@ You will lose your progress if you click away from this form.</p>
 <section id="registry" on="expand:registry.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>Registry</h1></header>
     <article>
+        <amp-img alt="Horses"
+              src="img/horse.jpg"
+              width="1800"
+              height="1000"
+              layout="responsive">
+            </amp-img>
         <amp-iframe width="800" height="800" sandbox="allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-forms allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" style="border:0" src="https://docs.google.com/forms/d/e/1FAIpQLSd8dDQ6FIOuY0BJ4JN-QOKFfXMDCQSaSE2LDn374nYgZT7iJw/viewform?embedded=true">
         </amp-iframe>
     </article>
