--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ You will lose your progress if you click away from this form.</p>
             Four twin beds.<br>
             Bring your sleeping bag and pillow (or ask us about rentals).<br>
             Outhouse on hill, and shower at the shared bath houses at main camp.<br><br><br><br><br>
-            CURRENT BOOKINGS:
+            CAMPERS:
         </p>
         <amp-iframe width="400" height="311.5" scrolling="no" sandbox="allow-scripts allow-same-origin allow-popups-to-escape-sandbox" layout="responsive" frameborder="0" src="https://docs.google.com/spreadsheets/d/17c6lBYkNtdiD44w66Kn_5JvMgTXZALwh1MnBOybNuBw/htmlembed/sheet?gid=1014832229">
         </amp-iframe>
