--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
 <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
 <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
+<script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
 <title>M  &nbsp;&nbsp;●&nbsp;&nbsp;  A</title>
 <link rel="canonical" href="https://markandannie.camp">
 <meta name="description" content="Come celebrate with us!">
@@ -447,7 +448,13 @@ You will lose your progress if you click away from this form.</p>
         </p>
         <amp-iframe width="800" height="800" sandbox="allow-modals allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" src="https://www.google.com/maps/d/embed?mid=10eAS31R--V5vUk8w6CcqVqAqBmJ_Hbjm">
         </amp-iframe>
-        <p>Annie LOVES to make recommendations, so <a href="mailto:hi@markandannie.camp?Subject=Touring" target="_blank">let us know</a> if you plan to tour WA!</p>
+        <p>Annie LOVES to make recommendations, so <a href="mailto:hi@markandannie.camp?Subject=Touring" target="_blank">let us know</a> if you plan to tour WA!<br>She also loves geology. A must-watch before you drive around Washington:</p>
+        <amp-youtube
+          data-videoid="VQhjkemEyUo"
+          layout="responsive"
+          width="480"
+          height="270"
+        ></amp-youtube>
     </article>
 </section>
 
