--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ You will lose your progress if you click away from this form.</p>
         </p>
         <amp-iframe width="800" height="800" sandbox="allow-modals allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" src="https://www.google.com/maps/d/embed?mid=10eAS31R--V5vUk8w6CcqVqAqBmJ_Hbjm">
         </amp-iframe>
-        <p>Annie LOVES to make recommendations, so <a href="mailto:hi@markandannie.camp?Subject=Touring" target="_blank">let us know</a> if you plan to tour WA!<br><br>She also loves geology. A must-watch before you drive around Washington:</p>
+        <p>Annie LOVES to make recommendations, so <a href="mailto:hi@markandannie.camp?Subject=Touring" target="_blank">let us know</a> if you plan to tour WA!<br><br>She also loves geology. A must-watch before you explore Washington:</p>
         <figure class="small"><amp-youtube
           data-videoid="VQhjkemEyUo"
           layout="responsive"
