--- a/index.html
+++ b/index.html
@@ -454,6 +454,8 @@ You will lose your progress if you click away from this form.</p>
           layout="responsive"
           width="480"
           height="270"
+            data-param-modestbranding=1
+        data-param-rel=0
         ></amp-youtube></figure>
     </article>
 </section>
