--- a/index.html
+++ b/index.html
@@ -476,6 +476,8 @@ You will lose your progress if you click away from this form.</p>
             data-param-modestbranding=1
         data-param-rel=0
         ></amp-youtube></figure>
+        
+        <p><a href="http://www.nickzentner.com/" target="_blank">Nick's website here</a>. Be sure to check out his podcast.</p>
     </article>
 </section>
 
