--- a/index.html
+++ b/index.html
@@ -497,12 +497,11 @@ You will lose your progress if you click away from this form.</p>
         6pm.....................................................Reception<br>
         11pm......................................................Campfire<br><br>
         SUNDAY<br>
-        9am............................................................Brunch<br>
         10am..........................................................Tidy-up<br>
-        12pm..........................................Depart Ranch<br>
+        11am..........................................Depart Ranch<br>
+        12pm.........................................................Brunch<br>
         12pm.................<a href="http://roslynfarmersmarket.org/" target="_blank">Roslyn Farmer's Market</a><br>
         2pm..........................Meet at <a href="https://goo.gl/maps/j9vLN5aDKGGfuPyX6" target="_blank">M+A's House</a><br>
-        3pm.........................................Roslyn Ramble<br>
         </p>
     </article>
 </section>
