--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@ You will lose your progress if you click away from this form.</p>
         SUNDAY<br>
         10am..........................................................Tidy-up<br>
         11am..........................................Depart Ranch<br>
-        12pm.........................................................Brunch<br>
+        12pm..........................................................Brunch<br>
         12pm.................<a href="http://roslynfarmersmarket.org/" target="_blank">Roslyn Farmer's Market</a><br>
         2pm..........................Meet at <a href="https://goo.gl/maps/j9vLN5aDKGGfuPyX6" target="_blank">M+A's House</a><br>
         </p>
