--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ button:focus {
   }
   .title{
     position:absolute;
-    top:24vh;
+    top:20vh;
     width:calc(100% - 20vh);
     font-size: 11vh;
     font-weight: 300;
@@ -285,7 +285,7 @@ amp-iframe{
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" role="presentation"><rect x="30" y="47" width="40" height="6" rx="1" ry="1"/><rect x="30" y="36.691" width="40" height="6" rx="1" ry="1"/><rect x="30" y="57.309" width="40" height="6" rx="1" ry="1"/></svg>
   </button>
 </header>
-<div class="title" role="button" tabindex="1" on="tap:sidebar1.toggle, hamburger.toggleClass(class=clicked)">M &nbsp;&nbsp;<div id="dot">●</div>&nbsp;&nbsp; A<div class="titleThin"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;25 July<br>***COVID-19 UPDATE: We are carefully watching the development of coronavirus, and are taking its impacts very seriously. We will need to assess whether or not this wedding can continue as planned in the coming weeks. Please plan accordingly.</div></div>
+<div class="title" role="button" tabindex="1" on="tap:sidebar1.toggle, hamburger.toggleClass(class=clicked)">M &nbsp;&nbsp;<div id="dot">●</div>&nbsp;&nbsp; A<div class="titleThin"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;25 July<br><br>***COVID-19 UPDATE: We are carefully watching the development of coronavirus, and are taking its impacts very seriously. We will need to assess whether or not this wedding can continue as planned in the coming weeks. Please plan accordingly.</div></div>
 <div class="spacer" id="topPage"></div>
 <div class="background">
   <amp-img alt="Background" src="img/background.jpg" layout="fill"></amp-img>
