--- a/index.html
+++ b/index.html
@@ -527,7 +527,10 @@ You will lose your progress if you click away from this form.</p>
 <section id="faq" on="expand:faq.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>FAQ</h1></header>
     <article>
-        <p><em>Where are Mark and Annie staying?</em><br>
+        <p><em>COVID-19!?!?</em><br>
+            We are carefully watching the development of coronavirus, and are taking its impacts very seriously. In the coming weeks we will assess whether this celebration can continue as planned. Please plan accordingly.<br><br>
+			
+			<em>Where are Mark and Annie staying?</em><br>
             Flying Horseshoe Ranch!<br><br>
             
             <em>What should I pack?</em><br>
