--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@ p.centered {
 
 <body>
 
-<div class="title">M &nbsp;&nbsp;<div id="dot">●</div>&nbsp;&nbsp; A<div class="titleThin"><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CANCELED<br><br><br><br><br>*** COVID-19 UPDATE ***<br><br>Sadly, we feel the only responsible course of action is to cancel our wedding celebration.<br>Please cancel your flight and lodging reservations.<br>If you reserved a cabin / tent at Flying Horseshoe, you don't have to do anything.<br><br><br>We tentatively think we will have an intimate ceremony in July, and we look forward to digitally sharing that moment with you in a way that makes sense. Thank you to all our incredible friends and family who volunteered to help with the wedding celebration, who supported us throughout, and who wished us a joyous marriage.<br><br><br>If you would like to send a gift, please donate to <a href="https://www.joincampaignzero.org/">Campaign Zero</a>, a cause we care very deeply about.<br><br><br></div></div>
+<div class="title">M &nbsp;&nbsp;<div id="dot">●</div>&nbsp;&nbsp; A<div class="titleThin"><br><br><br><br><br>While we missed celebrating with you all, we still felt lucky to have an intimate ceremony in 2020.<br>Please join usin celebrating our marriage through <a href="https://photos.app.goo.gl/XYTrGL4SNiHpEvxt5/">our online photo album</a>.<br><br><br></div></div>
 <div class="background">
-  <amp-img alt="Background" src="img/background3.jpg" layout="fill"></amp-img>
+  <amp-img alt="Background" src="img/background4.jpg" layout="fill"></amp-img>
 </div>
 
 
