--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ p.centered {
 
 <body>
 
-<div class="title">M &nbsp;&nbsp;<div id="dot">●</div>&nbsp;&nbsp; A<div class="titleThin"><br><br><br><br><br>While we missed celebrating with you all, we still felt lucky to have an intimate ceremony in 2020.<br>Please join us in celebrating our marriage through <a href="https://photos.app.goo.gl/XYTrGL4SNiHpEvxt5/">our online photo album</a>.<br><br><br></div></div>
+<div class="title">M &nbsp;&nbsp;<div id="dot">●</div>&nbsp;&nbsp; A<div class="titleThin"><br><br><br><br><br>While we missed celebrating with you all, we still felt lucky to have an intimate ceremony in 2020.<br><br>Please join us in celebrating our marriage through our <a href="https://photos.app.goo.gl/XYTrGL4SNiHpEvxt5/">ONLINE PHOTO ALBUM</a>.<br><br><br></div></div>
 <div class="background">
   <amp-img alt="Background" src="img/background6.jpg" layout="fill"></amp-img>
 </div>
