--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ button:focus {
     outline: none;
     }
   a:hover {
-    border-bottom: 1px dashed #aaa;
+    border-bottom: 1px dashed #fff;
   }
   ::selection {
    background:#f2f2f2;
