--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@ button:focus {
   }
   .titleThin{
     font-weight:300;
-    font-size: 3vh;
+    font-size: 2.5vh;
 	text-transform: none;
-	line-height: 4vh;
+	line-height: 3.5vh;
   }
     #dot{
         display:inline;
@@ -201,7 +201,7 @@ p.centered {
 
 <body>
 
-<div class="title">M &nbsp;&nbsp;<div id="dot">●</div>&nbsp;&nbsp; A<div class="titleThin"><br><br><br><br><br>While we missed celebrating with you all, we still felt lucky to have an intimate ceremony in 2020.<br><br>Please join us in celebrating our marriage through our <a href="https://photos.app.goo.gl/XYTrGL4SNiHpEvxt5/">ONLINE PHOTO ALBUM</a>.<br><br><br></div></div>
+<div class="title">M &nbsp;&nbsp;<div id="dot">●</div>&nbsp;&nbsp; A<div class="titleThin"><br><br><br><br>While we missed celebrating with you all, we still felt lucky to have an intimate ceremony in 2020.<br><br>Please join us in celebrating our marriage through our <a href="https://photos.app.goo.gl/XYTrGL4SNiHpEvxt5/">ONLINE PHOTO ALBUM</a>.</div></div>
 <div class="background">
   <amp-img alt="Background" src="img/background6.jpg" layout="fill"></amp-img>
 </div>
