--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     color:#16161d;
     text-rendering:optimizeLegibility;
     background:#16161d;
-    overflow-y:scroll;
+    overflow-y:hidden;
   }
   a{
     color:inherit;
